spacing fix on buttons

--- a/styles/source/_main.scss
+++ b/styles/source/_main.scss
@@ -97,6 +97,9 @@ h5 {
   margin: 10px auto 10px auto;
 }
 
+.btn {
+  margin-bottom:25px;
+}
 /* Call to Action links */
 
 .c2a {
@@ -212,7 +215,7 @@ h5 {
   background-color: black;
   font-size:14px;
   font-family: sans-serif;
-  margin:5px;
+  margin:10px;
   padding:5px;
 
 }
